--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Stepan Nshanyan",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
